--- a/client/html/mainPage.html
+++ b/client/html/mainPage.html
@@ -1,1 +1,18 @@
-Hello
+<!DOCTYPE html>
+<html lang='fr'>
+<head>
+    <meta charset="utf-8" />
+    <title>My toy app</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+    <script src="mainPage.js"></script>
+</head>
+
+<body ng-app="mainPageApp" ng-controller="mainPageController as MPcontroller">
+
+    <input type="text" id="foo"  ng-model="MPcontroller.blah">    
+    <br>
+    You type : {{MPcontroller.blah}}
+
+
+</body>
+</html>
