(tuto) What we do for the minimal angular.

--- a/client/html/mainPage.html
+++ b/client/html/mainPage.html
@@ -9,10 +9,9 @@
 
 <body ng-app="mainPageApp" ng-controller="mainPageController as MPcontroller">
 
-    <input type="text" id="foo"  ng-model="MPcontroller.blah">    
+    <input type="text" ng-model="MPcontroller.blah">    
     <br>
     You type : {{MPcontroller.blah}}
-
 
 </body>
 </html>
