--- a/client/html/mainPage.html
+++ b/client/html/mainPage.html
@@ -4,14 +4,35 @@
     <meta charset="utf-8" />
     <title>My toy app</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+
+<!-- Loaging the javascript stuff.
+    mainPage.js    contains the controller.
+    lb-services.js contains the object 'Book' which makes the interface with loopback.
+ -->
+
     <script src="mainPage.js"></script>
+    <script src="services/lb-services.js"></script>
 </head>
+
+<h1> My minimalistic page </h1>
 
 <body ng-app="mainPageApp" ng-controller="mainPageController as MPcontroller">
 
-    <input type="text" ng-model="MPcontroller.blah">    
-    <br>
-    You type : {{MPcontroller.blah}}
+    <!-- Create a form which launches 'addBook()' when submited
+        No need to pass MPcontroller.author as argument of 'addBook'
+        because 'addBook' is part of the object 'MPcontroller' as well as 'author'.
+     -->
+
+    <form name="addBookForm" ng-submit="MPcontroller.addBook()">
+        
+        <!-- 
+            What one writes in the text space is automatically put in the variable
+            'MPcontroller.author' (this is the aiù if 'ng-model').
+        -->
+
+        <input type="text" ng-model="MPcontroller.author">    
+        <button>Add</button>
+    </form>
 
 </body>
 </html>
