typo in a comment.

--- a/client/html/mainPage.html
+++ b/client/html/mainPage.html
@@ -27,7 +27,7 @@
         
         <!-- 
             What one writes in the text space is automatically put in the variable
-            'MPcontroller.author' (this is the aiù if 'ng-model').
+            'MPcontroller.author' (this is the aim if 'ng-model').
         -->
 
         <input type="text" ng-model="MPcontroller.author">    
