(js) Make the 'angular-resource' available.

--- a/client/html/mainPage.html
+++ b/client/html/mainPage.html
@@ -10,8 +10,10 @@
     lb-services.js contains the object 'Book' which makes the interface with loopback.
  -->
 
-    <script src="mainPage.js"></script>
+    
+    <script src="angular-resource/angular-resource.js"></script>
     <script src="services/lb-services.js"></script>
+    <script src="mainPage.js"></script>
 </head>
 
 <h1> My minimalistic page </h1>
