--- a/client/html/mainPage.html
+++ b/client/html/mainPage.html
@@ -6,11 +6,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 
 <!-- Loaging the javascript stuff.
-    mainPage.js    contains the controller.
-    lb-services.js contains the object 'Book' which makes the interface with loopback.
+    mainPage.js       contains the controller.
+    lb-services.js    contains the object 'Book' which makes the interface with loopback.
+    angular-resource  is a dependency.
  -->
 
-    
+    <script src="jquery/dist/jquery.js"></script>
+    <script src="bootstrap/dist/js/bootstrap.js"></script>
+    <script src="angular/angular.js"></script>
     <script src="angular-resource/angular-resource.js"></script>
     <script src="services/lb-services.js"></script>
     <script src="mainPage.js"></script>
