--- a/client/html/mainPage.html
+++ b/client/html/mainPage.html
@@ -15,6 +15,7 @@
     <script src="bootstrap/dist/js/bootstrap.js"></script>
     <script src="angular/angular.js"></script>
     <script src="angular-resource/angular-resource.js"></script>
+    <script src="angular-ui-router/release/angular-ui-router.js"></script>
     <script src="services/lb-services.js"></script>
     <script src="mainPage.js"></script>
 </head>
