(mainPage) Improve a comment

--- a/client/html/mainPage.html
+++ b/client/html/mainPage.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <title>My toy app</title>
-<!-- Loaging the javascript stuff.
-    mainPage.js       contains the controller.
-    lb-services.js    contains the object 'Book' which makes the interface with loopback.
-    angular-resource  is a dependency.
- -->
+    <!-- Loaging the javascript stuff.
+        mainPage.js       contains the controller.
+        lb-services.js    contains the object 'Book' which makes the interface with loopback.
+        others are dependencies.
+     -->
 
     <script src="jquery/dist/jquery.js"></script>
     <script src="bootstrap/dist/js/bootstrap.js"></script>
